<resources>
    <string name="app_name">Switter</string>

    <!-- login_fragment.xml -->
    <string name="signInView_loginFragment">SignIn</string>
    <string name="signUpView_loginFragment">SignUp</string>

    <!-- signin_fragment.xml -->
    <string name="signIn_buttonView_signInFragment">Sign in</string>
    <string name="resetPassword_textView_signInFragment">Reset password</string>

    <!-- signup_fragment.xml -->
    <string name="showPasswordView_signUpFragment">Show password</string>
    <string name="signUp_buttonView_signUpFragment">Sign up</string>
    <string name="emailHint_signUpFragment">Email</string>
    <string name="passwordHint_signUpFragment">Password</string>

    <!-- signup_info_fragment.xml -->
    <string name="editPhotoView_signUpInfoActivity">Edit photo</string>
    <string name="continueButton_signUpInfoActivity">Continue</string>


    <!-- content_fragment.xml -->
    <string name="feedString_contentFragment">Feed</string>
    <string name="storyString_contentFragment">Story</string>
    <string name="followingString_contentFragment">Following</string>
    <string name="followersString_contentFragment">Followers</string>

    <!-- user_activity.xml -->
    <string name="followString_button_userActivity">Follow</string>
    <string name="unfollowString_button_userActivity">Unfollow</string>
    <string name="defaultNameString_textView_userActivity">Mr Test</string>
    <string name="defaultHandleString_textView_userActivity">\@myAmazingHandle</string>
    <string name="followersString_textView_userActivity">followers</string>
    <string name="followingString_textView_userActivity">following</string>


    <!-- new_status_activity.xml -->
    <string name="editVideoString_newStatusActivity">Add video</string>
    <string name="editPictureString_newStatusActivity">Add picture link</string>
    <string name="sendButtonString_newStatusActivity">Send</string>

    <!-- update_profile_picture_activity -->
    <string name="checkBoxTextString_updateProfilePictureActivity">replace current profile profilePicture</string>
    <string name="selectPictureString_updateProfilePictureActivity">Select profilePicture</string>
    <string name="sendUpdatePicture_updateProfilePictureActivity">send</string>

    <!-- ResetPasswordActivity -->
    <string name="usernameHint_resetPasswordActivity">\@Handle</string>
    <string name="resetButton_resetPasswordActivity">Reset password</string>
    <string name="confirmationHint_resetPasswordActivity">Confirmation code</string>
    <string name="sendConfirmationButton_resetPasswordActivity">Send code</string>
    <string name="newPasswordHint_resetPasswordActivity">New password</string>

</resources>
