<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/usernameEditText_resetPasswordActivity"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/usernameHint_resetPasswordActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resetButton_resetPasswordActivity"
        android:id="@+id/resetButton_resetPasswordActivity"/>

    <EditText
        android:id="@+id/confirmationPasswordEditText_resetPasswordActivity"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/newPasswordHint_resetPasswordActivity" />

    <EditText
        android:id="@+id/confirmationCodeEditText_resetPasswordActivity"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/confirmationHint_resetPasswordActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sendConfirmationButton_resetPasswordActivity"
        android:id="@+id/confirmationButton_resetPasswordActivity"/>



</LinearLayout>