<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/feed_contentFragment_TextView"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:text="@string/feedString_contentFragment"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/story_contentFragment_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:text="@string/storyString_contentFragment"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/following_contentFragment_TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:text="@string/followingString_contentFragment"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/followers_contentFragment_TextView"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:text="@string/followersString_contentFragment"
            android:textSize="20sp" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragmentContainer_contentFragment_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="601dp"
        android:paddingTop="10dp"/>


</LinearLayout>