<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_signUpFragment_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="email"
                android:text="/@d.s"
                android:hint="@string/emailHint_signUpFragment"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_signUpFragment_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="test"
                android:inputType="textPassword"
                android:hint="@string/passwordHint_signUpFragment"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Switch
                android:id="@+id/showPassword_signUpFragment_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp" />

            <TextView
                android:id="@+id/showPassword_signUpFragment_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showPasswordView_signUpFragment"/>


        </LinearLayout>

        <Button
            android:id="@+id/signUp_signUpFragment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp_buttonView_signUpFragment"/>

    </LinearLayout>

</LinearLayout>