<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.UpdateProfilePictureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePicture_imageView_updateProfilePictureActivity"
            android:layout_width="121dp"
            android:layout_height="115dp"
            android:padding="10dp"
            android:scaleType="centerCrop" />

        <CheckBox
            android:id="@+id/updatePicture_checkBox_updateProfilePictureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxTextString_updateProfilePictureActivity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/selectNewPicture_TextView_updateProfilePictureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/selectPictureString_updateProfilePictureActivity" />

        <Button
            android:id="@+id/sendButton_updateProfilePictureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/sendUpdatePicture_updateProfilePictureActivity" />

    </LinearLayout>


</LinearLayout>