<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePic_ImageView_newStatusActivity"
            android:layout_width="84dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/handle_textView_newStatusActivity"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="TEST"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/message_editText_newStatusActivity"
        android:layout_width="398dp"
        android:layout_height="186dp"
        android:gravity="start"
        android:padding="10dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="TEST MESSAGE"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="111dp"
            android:layout_height="113dp"
            android:orientation="vertical">


            <VideoView
                android:id="@+id/videoHolder_videoView_newStatusActivity"
                android:layout_width="85dp"
                android:layout_height="61dp" />

            <TextView
                android:id="@+id/videoEdit_textView_newStatusActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/editVideoString_newStatusActivity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="103dp"
            android:layout_height="114dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageHolder_imageView_newStatusActivity"
                android:layout_width="81dp"
                android:layout_height="63dp" />


            <TextView
                android:id="@+id/imageEdit_textView_newStatusActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/editPictureString_newStatusActivity" />


        </LinearLayout>

        <Button
            android:id="@+id/sendButton_newStatusActivity"
            android:layout_width="74dp"
            android:layout_height="54dp"
            android:layout_gravity="end"
            android:text="@string/sendButtonString_newStatusActivity" />


    </LinearLayout>


</LinearLayout>